# wincontrol

./: README.md  pyproject.toml
src/wincontrol_gui/: gui.py  host.py
src/wincontrol_server/: server.py
src/wincontrol_server/devices/: keyboard.py  mouse.py  screen.py
src/wincontrol_server/prompts/: prompts.py  system_prompt.md
src/wincontrol_server/resources/: screen_resources.py
src/wincontrol_server/runtime/: runtime.py
src/wincontrol_server/tools/: keyboard_tools.py  mouse_tools.py  screen_tools.py
