[project]
name = "wincontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "mss>=10.1.0",
    "onnxruntime>=1.24.1",
    "openai>=2.20.0",
    "opencv-python-headless>=4.13.0.92",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "PyQt5>=5.15.11",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wincontrol_server", "src/wincontrol_gui"]

[project.scripts]
wincontrol = "wincontrol_gui.gui:main"
wincontrol-server = "wincontrol_server.server:main"
